--- a/WorshipKeys/LaunchScreen.storyboard
+++ b/WorshipKeys/LaunchScreen.storyboard
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -11,23 +12,23 @@
             <objects>
                 <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="WorshipKeys" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZI-MP-Vj5">
-                                <rect key="frame" x="235" y="496" width="131" height="27"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WorshipKeys" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZI-MP-Vj5">
+                                <rect key="frame" x="131" y="496" width="131" height="27"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                 <color key="textColor" red="0.86237373737373735" green="0.86237373737373735" blue="0.86237373737373735" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by João Victor Almeida" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="981-be-kTH">
-                                <rect key="frame" x="223" y="543" width="155" height="17"/>
+                                <rect key="frame" x="119" y="761" width="155" height="17"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <color key="textColor" red="0.86237373740000001" green="0.86237373740000001" blue="0.86237373740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchLogo" translatesAutoresizingMaskIntoConstraints="NO" id="6dO-S5-Wch">
-                                <rect key="frame" x="180" y="120" width="240" height="240"/>
+                                <rect key="frame" x="76.666666666666686" y="246" width="240" height="240"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="d2o-AH-SSG"/>
                                     <constraint firstAttribute="height" constant="240" id="qbp-nT-Fec"/>
@@ -39,6 +40,7 @@
                         <constraints>
                             <constraint firstItem="6dO-S5-Wch" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" constant="-60" id="1MF-if-DSi"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="981-be-kTH" secondAttribute="bottom" constant="40" id="4uZ-yb-5Hf"/>
+                            <constraint firstItem="GZI-MP-Vj5" firstAttribute="top" secondItem="6dO-S5-Wch" secondAttribute="bottom" constant="10" id="99m-P5-dbt"/>
                             <constraint firstItem="6dO-S5-Wch" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Dav-cK-nrS"/>
                             <constraint firstItem="981-be-kTH" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="JK5-hP-uNo"/>
                             <constraint firstItem="GZI-MP-Vj5" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="ZlB-Sc-NKh"/>
